--- a/human_filter/package.xml
+++ b/human_filter/package.xml
@@ -17,10 +17,12 @@
   <build_depend>tf</build_depend>
   <build_depend>bfl</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>message_runtime</build_depend>
   <build_depend>people_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -28,10 +30,12 @@
   <run_depend>tf</run_depend>
   <run_depend>bfl</run_depend>
   <run_depend>message_filters</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>people_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
   <run_depend>message_generation</run_depend>
 
 </package>
