--- a/human_filter/CMakeLists.txt
+++ b/human_filter/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(human_filter)
 
+SET(LEGSOURCES src/laser_processor.cpp src/srs_leg_detector.cpp src/calc_leg_features.cpp)
+
 # Look for bfl (Bayesian Filtering Library)
 find_package(PkgConfig)
 pkg_check_modules(BFL REQUIRED orocos-bfl)
+pkg_check_modules(bullet REQUIRED bullet)
 
 include_directories(${BFL_INCLUDE_DIRS})
 link_directories(${BFL_LIBRARY_DIRS})
@@ -16,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_srvs
   geometry_msgs
   tf
+  tf2
   message_filters
   people_msgs
   sensor_msgs
@@ -24,16 +28,23 @@ find_package(catkin REQUIRED COMPONENTS
   keyboard
   actionlib
   message_generation
+  cv_bridge
+  pcl_ros
+  pcl_conversions
 )
 
 
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS thread)
+find_package(PCL 1.7 REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(orocos_kdl REQUIRED)
 
 add_service_files(
    FILES
    set_target_to_follow.srv
+   DetectLegs.srv
 )
 
 add_action_files(
@@ -44,6 +55,7 @@ add_action_files(
 generate_messages(
    DEPENDENCIES
    geometry_msgs
+   sensor_msgs
    std_msgs
    std_srvs
    actionlib_msgs
@@ -62,13 +74,20 @@ CATKIN_DEPENDS
     nav_msgs
     actionlib_msgs
     actionlib
+    message_runtime
 LIBRARIES human_filter
 )
 
 ## Specify additional locations of header files
 include_directories(
   include ${catkin_INCLUDE_DIRS}
+    ${OpenCV_INCLUDE_DIRS}
+    ${orocos_kdl_INCLUDE_DIRS}
+    ${BFL_INCLUDE_DIRS}
+    ${BFL_INCLUDE_DIRS}/bfl
 )
+
+link_directories(${BFL_LIBRARY_DIRS})
 
 ## Declare a cpp library
 add_library(human_filter 
@@ -81,20 +100,27 @@ add_library(human_filter
             src/sysmodel_vector.cpp
             src/measmodel_pos.cpp
             src/measmodel_vector.cpp
-	    src/tracker_particle.cpp 
-	    src/tracker_kalman.cpp 
-	    src/detector_particle.cpp 
+	          src/tracker_particle.cpp 
+	          src/tracker_kalman.cpp 
+	          src/detector_particle.cpp           
 )
 
 ## Declare a cpp executable
 add_executable(kalman_tracker src/people_tracking_node.cpp)
 add_executable(edge_midfilter src/edge_leg_filter_node.cpp)
-add_executable(follow_service_test src/service_test.cpp ${SOURCES})
+add_executable(follow_service_test src/service_test.cpp)
+
+
+add_executable(srs_leg_detector ${LEGSOURCES})
+target_link_libraries(srs_leg_detector human_filter ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBS} ${BFL_LIBRARIES} ${orocos_kdl_LIBRARIES})
+add_dependencies(srs_leg_detector ${catkin_EXPORTED_TARGETS})
+
+
 
 ## Add cmake target dependencies of the executable/library
-add_dependencies(kalman_tracker people_msgs_gencpp human_filter ${cakin_EXPORTED_TARGETS})
-add_dependencies(edge_midfilter people_msgs_gencpp human_filter ${cakin_EXPORTED_TARGETS})
-add_dependencies(follow_service_test people_msgs_gencpp human_filter ${cakin_EXPORTED_TARGETS})
+add_dependencies(kalman_tracker human_filter ${cakin_EXPORTED_TARGETS})
+add_dependencies(edge_midfilter human_filter ${cakin_EXPORTED_TARGETS})
+add_dependencies(follow_service_test human_filter ${cakin_EXPORTED_TARGETS})
 
 
 
@@ -133,9 +159,20 @@ install(TARGETS follow_service_test
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(TARGETS srs_leg_detector
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
+
+install(FILES config/trained_leg_detector.yaml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
+
 
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
