--- a/human_filter/package.xml
+++ b/human_filter/package.xml
@@ -23,8 +23,10 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>bullet</build_depend>
 
   <run_depend>roscpp</run_depend>
+  <run_depend>OpenCV</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>tf</run_depend>
@@ -37,6 +39,7 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>message_generation</run_depend>
+  <run_depend>bullet</run_depend>
 
 </package>
 
