--- a/human_filter/package.xml
+++ b/human_filter/package.xml
@@ -25,6 +25,8 @@
   <build_depend>actionlib</build_depend>
   <build_depend>bullet</build_depend>
 
+  <build_depend>dynamic_reconfigure</build_depend>
+
   <run_depend>roscpp</run_depend>
   <run_depend>OpenCV</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -40,7 +42,7 @@
   <run_depend>actionlib</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>bullet</run_depend>
-
+  <run_depend>dynamic_reconfigure</run_depend>
 </package>
 
 
