--- a/villa_navi_service/config/naviconfig.yaml
+++ b/villa_navi_service/config/naviconfig.yaml
@@ -1,14 +1,22 @@
 villa_navi_service:
-    ref_frame: "map"                                         # The Kalman filter type: EKF = Extended Kalman Filter, UKF = Uncented Kalman Filter
-    goal_locations:                                           # The noise for the constant velocity prediction model
+    ref_frame: "map"
+    goal:
         x: 0.8
         y: 0.8
         t: 0.0 
-    mid_goal:
-        x: 2.0
-        y: 3.0
+    door:
+        x: 4.05
+        y: 1.0
         t: 0.5
     living_room:
         x: 10.0
         y: -2.0
         t: 0.0
+    home_pos:
+        x: 0.0
+        y: 0.0
+        t: 0.0
+    corridor:
+        x: 5.3
+        y: 1.5
+        t: 1.5
