--- a/visual_perception/CMakeLists.txt
+++ b/visual_perception/CMakeLists.txt
@@ -67,17 +67,20 @@ add_library(visual_perception
 ## Declare a cpp executable
 add_executable(visible_manager src/visible_region.cpp)
 add_executable(people_marker src/people_marker.cpp)
+add_executable(human_belief  src/human_belief.cpp)
 
 
 
 ## Add cmake target dependencies of the executable/library
 add_dependencies(visible_manager visual_perception ${catkin_EXPORTED_TARGETS})
 add_dependencies(people_marker ${catkin_EXPORTED_TARGETS})
+add_dependencies(human_belief ${catkin_EXPORTED_TARGETS})
 
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(visible_manager visual_perception ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${BFL_LIBRARIES})
 target_link_libraries(people_marker ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${BFL_LIBRARIES})
+target_link_libraries(human_belief ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${BFL_LIBRARIES})
 
 
 install(TARGETS ${PROJECT_NAME}
