--- a/human_filter/CMakeLists.txt
+++ b/human_filter/CMakeLists.txt
@@ -115,6 +115,7 @@ add_library(human_filter
 ## Declare a cpp executable
 add_executable(kalman_tracker src/people_tracking_node.cpp)
 add_executable(edge_midfilter src/edge_leg_filter_node.cpp)
+add_executable(op_filter_tracker src/op_filter_tracker.cpp)
 add_executable(opleg_filter src/leg_op_filter_node.cpp)
 add_executable(follow_service_test src/service_test.cpp)
 
@@ -136,6 +137,7 @@ add_dependencies(backup_srs_leg_detector ${catkin_EXPORTED_TARGETS})
 ## Add cmake target dependencies of the executable/library
 add_dependencies(kalman_tracker human_filter ${cakin_EXPORTED_TARGETS})
 add_dependencies(edge_midfilter human_filter ${cakin_EXPORTED_TARGETS})
+add_dependencies(op_filter_tracker human_filter ${cakin_EXPORTED_TARGETS})
 add_dependencies(follow_service_test human_filter ${cakin_EXPORTED_TARGETS})
 add_dependencies(opleg_filter human_filter ${cakin_EXPORTED_TARGETS})
 
@@ -148,6 +150,8 @@ target_link_libraries(kalman_tracker human_filter ${catkin_LIBRARIES} ${Boost_LI
 target_link_libraries(edge_midfilter human_filter ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${BFL_LIBRARIES}
 )
 
+target_link_libraries(op_filter_tracker human_filter ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${BFL_LIBRARIES}
+)
 target_link_libraries(opleg_filter human_filter ${catkin_LIBRARIES}
     ${Boost_LIBRARIES} ${BFL_LIBRARIES})
 
